Initial version of /top command. Doesn't work if user isn't under block

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
   setBingoLobby:
     description: sets the lobby location for Bingo
     usage: /<command>
+  surface:
+    description: moves player to top of world
+    usage: /<command>
