Fixing issue of teleporting to top of hole and renaming command to /top

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,6 +16,6 @@ commands:
   setBingoLobby:
     description: sets the lobby location for Bingo
     usage: /<command>
-  surface:
-    description: moves player to top of world
+  top:
+    description: moves player to surface of world
     usage: /<command>
